docs(api): add docs for POST /init;
