# docs/openapi.yaml
@@ -149,6 +149,30 @@ paths:
       security:
       - permissions:
         - GenreDelete
+  /init:
+    post:
+      tags:
+      - users
+      summary: Creates the first user in the database.
+      description: |-
+        Creates the first user in the database.
+
+        This endpoint only works if the database is empty.
+        It allows the creation of the first user, who can then invite all other users.
+        The first user has all permissions available.
+      operationId: user_init
+      requestBody:
+        description: The username & password of the first user
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Json'
+        required: true
+      responses:
+        '200':
+          description: The user was created successfully
+        '409':
+          description: Conflict the database is not empty
   /invite:
     get:
       tags:
